removed display of index entries

--- a/lsp-guidelines.tex
+++ b/lsp-guidelines.tex
@@ -84,9 +84,9 @@
 \usepackage{LSP/lsp-styles/lsp-gb4e}
 
 
-\iflsDraft
-\proofmodetrue
-\fi
+%% \iflsDraft
+%% \proofmodetrue
+%% \fi
 
 % This is needed to allow for hyphenation in \texttt
 % http://tex.stackexchange.com/questions/44361/how-to-automatically-hyphenate-within-texttt
