--- a/lsp-authors.tex
+++ b/lsp-authors.tex
@@ -20,7 +20,14 @@ these things are covered automatically by the Word Template\footnote{
 }. Authors who start a new book project are strongly recommended to use \latex from the very beginning.
 
 
+\section{British vs.\ American English}
+
+Books that are written in English should use British or American spelling consistently. Edited
+volumes may have chapters in British and American English, but each chapter should be consistent.
+
+
 \section{Front matter}
+
 The front matter of \lsp books is structured as follows
 \begin{itemize}
  \item optional dedication
