--- a/lsp-guidelines.tex
+++ b/lsp-guidelines.tex
@@ -16,6 +16,7 @@
 \newcommand{\latex}{\LaTeX\xspace}
 
 
+\usepackage{embrac}
 
 % just for the XeLaTeX logo
 \usepackage{dtklogos}\newcommand{\xelatex}{\XeLaTeX\xspace}
@@ -83,6 +84,7 @@
 %\TeXXeTOff
 \usepackage{LSP/lsp-styles/lsp-gb4e}
 
+\def\exfont{\normalsize\itshape}
 
 %% \iflsDraft
 %% \proofmodetrue
@@ -202,3 +204,46 @@ Berlin, \today\hfill Stefan Müller \& Martin Haspelmath
 \end{document}
       
 %      <!-- Local IspellDict: en_US-w_accents -->
+
+
+
+On 19/03/2014 15:24, Sebastian Nordhoff wrote:
+> da kann man noch ganz viele Sachen eintragen, zB Zielgruppe, Rechte etc
+> (derzeit alles blank). Gibt es dafür schon einen Prozess? Sollen die
+> Autoren hier Vorschläge machen, die Herausgeber, oder die Techniker (aka
+> SN)?
+Autoren machen Vorschläge, Reihenherausgeber segnen ab, würde ich sagen.
+> Ich würde mal vorschlagen, ich mache das jetzt für Corinna nach bestem
+> Wissen und Gewissen, aber in Zukunft sollten diese Dinge einheitlich
+> geregelt sein
+Genau, das muss ein Punkt in den Guidelines werden.
+
+Aber wo genau erscheint diese Info?
+
+M.
+
+
+
+Würde ich nicht so streng sehen, aber ich persönlich habe eine Präferenz für "The term accusative" (also kursiv). Dann kann man die allgemeinen Regeln formulieren:
+
+– Kursiv für metasprachliche Verwendung
+– doppelte Anführungszeichen für Distanzierung (was andere sagen: Zitate, und von anderen verwendete Termini)
+– einfache Anführungszeichen für Bedeutungen
+
+(Stefan: Mir ist unklar, ob etwas davon in die allgemeinen LangSci-Guidelines rein soll. Bei manchen
+dieser Dinge gibt es einfach unterschiedliche Konventionen.)
+
+
+> Machst Du das weiter? Ich würde sonst alles einfach so an Corinna
+> forwärtsen.
+Hab gerade an Corinna geschrieben. Stefan, du kannst entscheiden, welche von diesen Dingen noch in
+> die Guidelines rein sollen (eventuell, dass Termini kursiv sein sollen?, oder dass nach e.g. kein
+> Komme kommt?). 
+
+FAQ:
+
+Ich vermute, dass Du \mainmatter nicht verwendet hast.
+
+Im github gibt es ein Repository lsp-books, wo die Bücher zur Endredaktion reinkommen. Das ist öffentlich, allerdings nicht googlebar. Wenn Du willst, kann ich Dein Werk schon mal reinstellen. Dann haben alle Zugriff.
+
+
