extracted author guidelines

--- a/lsp-guidelines.tex
+++ b/lsp-guidelines.tex
@@ -1,8 +1,8 @@
 %% -*- coding:utf-8 -*-
 \documentclass[ number=??
                 ,series=lnls,
-                ,isbn=xxx-x-xxxxxx-xx-x,
-                ,url=http://langsci-press.org/catalog/book/14,
+                ,isbn=000-0-000000-00-0,
+                ,url=http://langsci-press.org/catalog/book/0,
 	        ,output=long    % long|short|inprep              
 	        %,blackandwhite
 	        %,smallfont
