--- a/styles/abbrev.sty
+++ b/styles/abbrev.sty
@@ -1,6 +1,6 @@
-\usepackage{my-xspace}
+% \usepackage{my-xspace}
 %\usepackage{german}
-
+% 
 % \, -> kurz \ -> '.' kein Satzende
 
 \newcommand{\ua}{u.\,a.\ }
