--- a/lsp-editors.tex
+++ b/lsp-editors.tex
@@ -1,5 +1,16 @@
 %% -*- coding:utf-8 -*-
-
+\documentclass[ number=??
+                ,series=lnls,
+                ,isbn=000-0-000000-00-0,
+                ,url=http://langsci-press.org/catalog/book/0,
+	        ,output=long    % long|short|inprep              
+	        %,blackandwhite
+	        %,smallfont
+	        ,draftmode  
+		  ]{LSP/langsci}                          
+\author{Stefan Müller and Sebastian Nordhoff}
+\title{Guidelines for e}
+\begin{document}
 \chapter{Guidelines for editors}
 
 \section{Decision structure}
@@ -195,3 +206,4 @@ Once author, Series Editors AND Press Coordinators have given their imprimatur, 
 
 There will be two newsletters per month to inform all series editors about new submissions, accepted
 manuscripts, published books and other news. 
+\end{document}
