more granular guidelines

--- a/lsp-guidelines_latex.tex
+++ b/lsp-guidelines_latex.tex
@@ -28,9 +28,9 @@
 
 \def\exfont{\normalsize\upshape}
 
-\title{Language Science Press author guidelines}  
-\subtitle{General rules for authors}
-\BackTitle{Language Science Press author guidelines}
+\title{Language Science Press \latex guidelines}  
+\subtitle{Everything a linguist needs, and more}
+\BackTitle{Language Science Press guidelines}
 
 \BackBody{...
 }
@@ -57,7 +57,7 @@
 
 \mainmatter         
 \is{test}
-\include{lsp-authors_sn}
+\include{lsp-latex_sn}
 
 
 \backmatter
