--- a/lsp-guidelines_latex.tex
+++ b/lsp-guidelines_latex.tex
@@ -37,7 +37,7 @@
 
 % \dedication{This book is dedicated to everybody who cannot afford to buy books by profit oriented publishers}
 
-\typesetter{Stefan Müller, Sebastian Nordhoff}
+\typesetter{Sebastian Nordhoff}
 \proofreader{}
 
 \author{Stefan Müller, Martin Haspelmath \& Sebastian Nordhoff}
