--- a/lsp-latex_sn.tex
+++ b/lsp-latex_sn.tex
@@ -1,18 +1,27 @@
 %% -*- coding:utf-8 -*-
 \chapter{\LaTeX}
 
-
 \section{Installation of the \texttt{langsci} class}
+\subsection{Local installation}
+For your first book, the easiest way will be to download the skeleton from \url{...} %FIXME
+If you are dealing with Language Science Press books on a regular basis, you might want to opt for a system wide installation. The LSP class can be downloaded from \url{...} and will be available on CTAN in the near future.
 
-\subsection{Using the skeleton}
-\subsection{System wide installation}
+Language Science Press uses the Libertine fonts. If there are not found on your system, please contact your system administrator to install them. If for whatever reason the fonts cannot be installed, we provide a skeleton which does not require the Libertine fonts. The creation of the book will be the same, but the 
+
+\subsection{Using writelatex}
+In order to familiarize yourself with \latex, you might also want to try the webservice writelatex.com first. Visit \url{...} and select ``open as template''. Click on [Project] at the very top to see all files. The most important file is chapters/filename.tex
+
+\section{The skeleton}
+The skeleton has a main file, which is called lsp-skeleton.tex. You can leave that name or choose a name more suitable for your book, e.g. smith.tex or hawaiiangrammar.tex. That main file draws information from a number of other files which are in the same directory. All those files start with ``local....''. Furthermore, the main file includes the chapters, which are found in the directory ``chapters''.
+
+
 \section{Installing Fonts}
 
 
 
 \section{Using the \texttt{langsci} class}
 \subsection{IDEs}
-Windows
+Windows,bnbn
 Mac
 Linux
 source code pdf 
