--- a/lsp-guidelines_authors.tex
+++ b/lsp-guidelines_authors.tex
@@ -3,17 +3,13 @@
                 ,series=guidelines,
                 ,isbn=000-0-000000-00-0,
                 ,url=http://langsci-press.org/catalog/book/0,
-	        ,output=guidelines% long|short|inprep              
-	        %,blackandwhite
-	        %,smallfont
-	        ,draftmode  
+	        ,output=guidelines
 		,oneside
 		  ]{LSP/langsci}   
 		  
 
           
-\hypersetup{pdfdisplaydoctitle=true}
-\usepackage{showidx}
+\hypersetup{pdfdisplaydoctitle=true} 
 \usepackage{xspace}
 \newcommand{\latex}{\LaTeX\xspace}
 
@@ -55,10 +51,8 @@
 
 \tableofcontents      
 
-\mainmatter         
-\is{test}
-\include{lsp-authors_sn}
-
+\mainmatter     
+\include{authors}
 
 \backmatter
 
