--- a/lsp-guidelines.bib
+++ b/lsp-guidelines.bib
@@ -28,7 +28,7 @@
   year       = {1976}
 }
 
-@book{Bloomfield33a,
+@book{Bloomfield1933language,
 	Address = {London},
 	Author = {Leonard Bloomfield},
 	Publisher = {George Allen and Unwin},
