--- a/showcases.tex
+++ b/showcases.tex
@@ -1,6 +1,4 @@
-
-
-\section{Packages specific for linguistics}
+\chapter{Showcases}
 
 There is a huge amount of packages that can be used for various purposes. \citew{MG2013a} is a good
 reference book. This section discusses some aspects of some packages that are relevant for
