--- a/wrap-global.tex
+++ b/wrap-global.tex
@@ -26,11 +26,11 @@
 \usepackage{LSP/lsp-styles/lsp-makros}
 
 
-\usepackage{german}\selectlanguage{USenglish}
+% \usepackage{german}\selectlanguage{USenglish}
 
-\usepackage{LSP/lsp-styles/lsp-eng-hyp}
+% \usepackage{LSP/lsp-styles/lsp-eng-hyp}
 
-\usepackage{styles/abbrev}
+% \usepackage{styles/abbrev}
 
 
       
@@ -99,6 +99,7 @@
 \mainmatter     
  
 \include{authors}
+\include{volumeeditors}
 \include{serieseditors}
 \include{latex}
 \include{showcases}
