--- a/typesetters.tex
+++ b/typesetters.tex
@@ -1,16 +1,26 @@
-typesetters
+\chapter{Typesetters}
+In order to finalize the typesetting of your volume, proceed as follows, in exactly that order:
 
-length of titles, page headers, toc entries
-
-fit floats
-
-place floats
-
-overfull hboxes
-
-full pages
-
-clubs and widows
-
-clubs and widows bibliography
-
+\begin{enumerate}
+ \item make sure that the content of your book is absolutely final. No typos, no misrepresentations, no weird sentences should be left
+ \item make again sure that the content is final 
+ \item make sure title and author fit on both cover and spine. 
+ \item check that all chapter titles fit the page width and on their line in the table of contents. 
+ \item check that all chapter authors fit the page width and on their line in the table of contents. 
+ \item check that even page headers fit the page width for all chapters
+ \item check that odd page headers fit the page width for all chapters
+ \item check the appearance of the table of contents
+ \item check the impressum page. Is all information about authors, typesetters, proofreaders, series given?
+ \item check whether all lines fit the page width. If there are lines which stick out, this is either due to missing information about hyphenation, or there is simply no good way to fit the words in one line. In the former case, add hyphenation information to the file \computer{localhyphenation.sty}. You can also prevent hyphenation of a word by putting it in an \computer{{\bs}mbox}. Sometimes, the only solution is to change the sentence slightly. Common operations include changing the place of an adverb or using synonyms.
+ \item check whether all tables and figure fit page width and page length. You can use \computer{{\bs}resizebox\{{\bs}linewidth\}\{!\}\{stuff to resize\}} to make them fit.
+ \item place all \computer{table}s and \computer{figure}s with the options 
+\computer{[h]ere}, 
+\computer{[t]op of page}, 
+\computer{[b]ottom of page},
+\computer{separate [p]age}. You can use several of these options, e.g. \computer{{\bs}egin\{figure\}[ht]} to place a figure either exactly where it is in the document or on the top of this page or another page.  A figure should generally appear as close to the text which refers to it, either on the same page or a following page. If the figure is on a following page, it is preferable that the reader does not have to turn the page. Next to the parameters \computer{[hbpt]}, you can also change the position of the relevant lines of source code to ``move'' a figure to the top or bottom of another page of the pdf. 
+\item check for widows and orphans. If a paragraph is split between pages, there should be at least two lines on both pages. In order to move  an orphan to the following page, use \computer{{\bs}newpage} at the relevant position. In order to pull a widow back to the preceding page, use \computer{{\bs}enlargethispage\{1\baselineskip\}}. This will allow an extra line on this page. You can add more extra lines with \computer{2{\bs}baselineskip} and so on.  
+\item check for split footnotes. Sometimes, long footnotes are split across pages. You can use \computer{{\bs}enlargethispage\{1\baselineskip\}} as above, or you can try to move the word with the footnote to another page. Sometimes, there are chain dependencies, which can be tough to resolve
+% \item check the bibliography for widows and orphans. 
+\item check whether the name index contains non-persons, such as ``SIL''. The Name Index is generated from the bibliography, and if the bibliography lists an institution as an author, that institution will figure in the Name Index. Open the \computer\{.and\} file and remove the relevant entries. Be aware that if you generate a new index afterwards, your changes will be overwritten. 
+\item check the index for overlong lines. Either add relevant information about hyphenation to \computer{localhyphenation.sty}, or open the relevant index file (\computer{.ind}, \computer{.and},\computer{.lnd}) and fix the issue there.  
+\end{enumerate} 
