--- a/typesetters.tex
+++ b/typesetters.tex
@@ -18,8 +18,8 @@ In order to finalize the typesetting of your volume, proceed as follows, in exac
 \computer{[t]op of page}, 
 \computer{[b]ottom of page},
 \computer{separate [p]age}. You can use several of these options, e.g. \computer{{\bs}egin\{figure\}[ht]} to place a figure either exactly where it is in the document or on the top of this page or another page.  A figure should generally appear as close to the text which refers to it, either on the same page or a following page. If the figure is on a following page, it is preferable that the reader does not have to turn the page. Next to the parameters \computer{[hbpt]}, you can also change the position of the relevant lines of source code to ``move'' a figure to the top or bottom of another page of the pdf. 
-\item check for widows and orphans. If a paragraph is split between pages, there should be at least two lines on both pages. In order to move  an orphan to the following page, use \computer{{\bs}newpage} at the relevant position. In order to pull a widow back to the preceding page, use \computer{{\bs}enlargethispage\{1\baselineskip\}}. This will allow an extra line on this page. You can add more extra lines with \computer{2{\bs}baselineskip} and so on.  
-\item check for split footnotes. Sometimes, long footnotes are split across pages. You can use \computer{{\bs}enlargethispage\{1\baselineskip\}} as above, or you can try to move the word with the footnote to another page. Sometimes, there are chain dependencies, which can be tough to resolve
+\item check for widows and orphans. If a paragraph is split between pages, there should be at least two lines on both pages. In order to move  an orphan to the following page, use \computer{{\bs}newpage} at the relevant position. In order to pull a widow back to the preceding page, use \computer{{\bs}enlargethispage\{1{\bs}baselineskip\}}. This will allow an extra line on this page. You can add more extra lines with \computer{2{\bs}baselineskip} and so on.  
+\item check for split footnotes. Sometimes, long footnotes are split across pages. You can use \computer{{\bs}enlargethispage\{1{\bs}baselineskip\}} as above, or you can try to move the word with the footnote to another page. Sometimes, there are chain dependencies, which can be tough to resolve
 % \item check the bibliography for widows and orphans. 
 \item check whether the name index contains non-persons, such as ``SIL''. The Name Index is generated from the bibliography, and if the bibliography lists an institution as an author, that institution will figure in the Name Index. Open the \computer\{.and\} file and remove the relevant entries. Be aware that if you generate a new index afterwards, your changes will be overwritten. 
 \item check the index for overlong lines. Either add relevant information about hyphenation to \computer{localhyphenation.sty}, or open the relevant index file (\computer{.ind}, \computer{.and},\computer{.lnd}) and fix the issue there.  
